fix: TMDB API 호출 최적화 4 #39