@@ -13,6 +13,7 @@ import com.clipstory.clipstoryserver.responseDto.PagedResponseDto;
 import java.time.LocalTime;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import lombok.RequiredArgsConstructor;
@@ -22,6 +23,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
@@ -50,7 +52,6 @@ public class MovieService {
     private final String IMAGE_BASE_URL = "https://image.tmdb.org/t/p/w200";
 
     public Movie createMovie(Long movieId, Long tId, String title, Set<Genre> genres) {
-        //log.info("createMovie에서" + movieId);
         return Movie.toEntity(movieId, tId, title, genres);
     }
 
@@ -63,24 +64,17 @@ public class MovieService {
         return getPagedMovieResponseDto(movies);
     }
 
+    @Transactional
     public List<MovieResponseDto> getMovies(List<Movie> movies) {
-        Stream<CompletableFuture<MovieResponseDto>> futures = movies.stream()
-                .map(movie -> CompletableFuture.supplyAsync(() ->
-                        MovieResponseDto.toMovieResponseDto(
-                                movie, movie.getAverageRating(),
-                                tagService.getTagsByMovieId(movie.getId()),
-                                addMovieInformation(movie)
-                        )
-                ));
-
-        return futures.map(CompletableFuture::join).toList();
+        return movies.parallelStream()
+                .map(movie -> getMovie(movie.getId()))
+                .toList();
     }
 
     public MovieResponseDto getMovie(Long movieId) {
         Movie movie = findMovieById(movieId);
         return MovieResponseDto.toMovieResponseDto(
-                movie, movie.getAverageRating(),
-                tagService.getTagsByMovieId(movie.getId()),
+                movie,
                 addMovieInformation(movie));
     }
 
@@ -95,18 +89,10 @@ public class MovieService {
     }
 
     public PagedResponseDto<MovieResponseDto> getPagedMovieResponseDto(Page<Movie> movies) {
-        Stream<CompletableFuture<MovieResponseDto>> futures = movies.stream()
-                .map(movie -> CompletableFuture.supplyAsync(() ->
-                        MovieResponseDto.toMovieResponseDto(
-                                movie, movie.getAverageRating(),
-                                tagService.getTagsByMovieId(movie.getId()),
-                                addMovieInformation(movie)
-                        )
-                ));
-
-        List<MovieResponseDto> movieResponseDtos = futures
-                .map(CompletableFuture::join)
-                .toList();
+        List<MovieResponseDto> movieResponseDtos = movies.stream()
+                .parallel()
+                .map(movie -> getMovie(movie.getId())
+                ).collect(Collectors.toList());
 
         return new PagedResponseDto<>(movieResponseDtos, movies.getNumber(), movies.getSize(), movies.getTotalElements(), movies.getTotalPages(), movies.isLast());
     }
@@ -124,19 +110,18 @@ public class MovieService {
         return movieRepository.findAll();
     }
 
-    @Async
-    public CompletableFuture<MovieExtraInformationResponseDto> addMovieInformation(Movie movie) {
+    public MovieExtraInformationResponseDto addMovieInformation(Movie movie) {
         Long tid = movie.getTId();
         if (tid == null)
-            return CompletableFuture.completedFuture(null);
+            return null;
         RestTemplate restTemplate = new RestTemplate();
-        try{
+        try {
             MovieExtraInformationResponseDto movieExtraInformationResponseDto = restTemplate.getForObject(BASE_URL + tid +
                     "?api_key=" + apiKey + LANGUAGE_FORMAT, MovieExtraInformationResponseDto.class);
             movieExtraInformationResponseDto.setPoster_path(IMAGE_BASE_URL + movieExtraInformationResponseDto.getPoster_path());
-            return CompletableFuture.completedFuture(movieExtraInformationResponseDto);
-        }catch (HttpClientErrorException ex) {
-            return CompletableFuture.completedFuture(null);
+            return movieExtraInformationResponseDto;
+        } catch (HttpClientErrorException ex) {
+            return null;
         }
     }
 
